# despot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.assets/: demo.tape
.badges/: python.json  version.json
despot/: base.py  batch.py  cli.py  config.py  constants.py  enums.py  exceptions.py  logging.py  metadata.py  models.py  parser.py  utils.py
